add first unit test for ViewModel
* setup testing
  - JUnit6
  - Mockk
  - Truth
* MainDispatcherExtension for testing ViewModels